templates/Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webdeployments
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
   # maxSurge: 0
  #  maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: webserver
  template:
    metadata:
      labels:
        name: webserver
    spec:
      containers:
      - name: webserver-containers
        image: pj09/webserver
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: '500Mi'
          requests:
            cpu: '0.5'
            memory: '500Mi'
        ports:
        - containerPort: 80
                
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: /
            port: 80
        readinessProbe:
          initialDelaySeconds: 20
          periodSeconds: 5
          httpGet:
            path: /
            port: 80
        #volumeMounts:
         # - name: webvolume
          #  mountPath: "/tmp"
  #   volumes:
   #    - name: webvolume
    #     hostPath:
     #      path: /tmp/data
